tests/paczka1/small_fuzzy/98268126.err
Error in line 11: sUVb S118 17,3
Error in line 7: ti4e S329 0,3
Error in line 13: ti4e S118 84,9
